2025-12-18T02:00:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20323427574 # 1677
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-18
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3863 / 0 3868 / +0 +5

2025-12-17T01:59:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20289014490 # 1675
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-17
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3860 / 0 3863 / +0 +3

2025-12-16T02:04:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20253988375 # 1673
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-16
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3854 / 0 3860 / +0 +6

2025-12-13T12:49:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20192269425 # 1668
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-13
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3853 / 0 3854 / +0 +1

2025-12-11T12:57:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20133861788 # 1664
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-11
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3850 / 0 3853 / +0 +3

2025-12-11T02:04:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20119507291 # 1663