@@ -1,3 +1,9 @@
+2025-12-18T12:54:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20337638902 # 1678
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-18
+* notice: query file size: 26208
+* notice: accum prev / next / diff: re vi: 0 3868 / 0 3869 / +0 +1
+
 2025-12-18T02:00:21Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20323427574 # 1677
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-18
